# 2-layerQG

./: .gitignore  README.md  pyproject.toml  requirements.txt  verify_refactoring.py
Eddy_Growth/: Plot_Moist_Growth.ipynb  moist_growth.py  moist_growth_non_sat.py
Eddy_Growth/moist_eddy_growth/: .moist_growth_matrix.py.swp  Plot_Moist_Growth.ipynb  moist_growth_matrix.py
eddy_growth/dry_eddy_growth/: BUILD  README.md  build_matrices.py  calculate_eddy_growth.py
eddy_growth/moist_eddy_growth/: BUILD  README.md  moist_growth_matrix.py
local_wave_activity/make_lwa/: BUILD  README.md  calculate_lwa.py
local_wave_activity/make_lwa_budget/: BUILD  README.md  array_utils.py  lp_budget_make.py  lwa_budget_make.py  lwabudget.py  uref_make.py
notebooks/: plot_eddy_growth.ipynb  plot_moist_growth.ipynb
qg_eddy_growth/: __init__.py  dry_growth.py  matrices.py  moist_growth.py
qg_lwa/: __init__.py  array_utils.py  budget.py  compute_budget.py  compute_lp.py  compute_lwa.py  compute_uref.py
qg_lwa/fortran/: lwa_2layer.f90
tests/: test_verify.py
